--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,18 +28,18 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: Log in to the Container registry
-        uses: docker/login-action@360b4b5fefbd590a50c2ff0c234dbd9fa6b08759
+        uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@dbbf01822bb698575d92e1ee5b9229d58745b0c6
+        uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
       - name: Build and push Docker image
-        uses: docker/build-push-action@a799b4decf46d51b39dd396f4df5a4343afd30c4
+        uses: docker/build-push-action@v4
         with:
           context: .
           push: true
